Generate more strings

--- a/lib/l10n/untranslated.json
+++ b/lib/l10n/untranslated.json
@@ -11,7 +11,46 @@
     "from",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "couldnt_find_post",
+    "invalid_url",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "invalid_password",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "ca": [
@@ -22,7 +61,17 @@
     "add_instance",
     "sign_in",
     "register",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "da": [
@@ -42,7 +91,11 @@
     "appearance",
     "add_instance",
     "sign_in",
-    "register"
+    "register",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report"
   ],
 
   "el": [
@@ -110,7 +163,26 @@
     "saved",
     "theme",
     "old",
-    "by"
+    "by",
+    "invalid_url",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "invalid_community_name",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "community_user_already_banned",
+    "invalid_password",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_private_message",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "fi": [
@@ -124,7 +196,18 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_community_name",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow"
   ],
 
   "fr": [
@@ -134,7 +217,8 @@
     "appearance",
     "add_instance",
     "sign_in",
-    "register"
+    "register",
+    "report_too_long"
   ],
 
   "ga": [
@@ -144,7 +228,11 @@
     "appearance",
     "add_instance",
     "sign_in",
-    "register"
+    "register",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report"
   ],
 
   "gl": [
@@ -208,7 +296,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "hi": [
@@ -259,7 +396,51 @@
     "old",
     "top",
     "chat",
-    "by"
+    "by",
+    "not_an_admin",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "hr": [
@@ -323,7 +504,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "hu": [
@@ -337,7 +567,17 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "it": [
@@ -358,7 +598,18 @@
     "add_instance",
     "sign_in",
     "register",
-    "local"
+    "local",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "invalid_community_name",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "invalid_username"
   ],
 
   "ka": [
@@ -372,7 +623,22 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "invalid_community_name",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_private_message",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "km": [
@@ -436,7 +702,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "ko": [
@@ -460,7 +775,17 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "oc": [
@@ -524,7 +849,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "pl": [
@@ -596,7 +970,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "pt_BR": [
@@ -606,7 +1029,11 @@
     "appearance",
     "add_instance",
     "sign_in",
-    "register"
+    "register",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report"
   ],
 
   "ru": [
@@ -630,7 +1057,17 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "sr": [
@@ -694,7 +1131,56 @@
     "top",
     "chat",
     "admin",
-    "by"
+    "by",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "downvotes_disabled",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "registration_closed",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "sr_Latn": [
@@ -741,7 +1227,54 @@
     "new_",
     "old",
     "top",
-    "admin"
+    "admin",
+    "not_an_admin",
+    "couldnt_find_post",
+    "not_logged_in",
+    "site_ban",
+    "community_ban",
+    "invalid_url",
+    "locked",
+    "couldnt_create_comment",
+    "couldnt_like_comment",
+    "couldnt_update_comment",
+    "no_comment_edit_allowed",
+    "couldnt_save_comment",
+    "couldnt_get_comments",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "couldnt_create_post",
+    "couldnt_like_post",
+    "couldnt_find_community",
+    "couldnt_get_posts",
+    "no_post_edit_allowed",
+    "couldnt_save_post",
+    "site_already_exists",
+    "couldnt_update_site",
+    "invalid_community_name",
+    "community_already_exists",
+    "community_moderator_already_exists",
+    "community_follower_already_exists",
+    "not_a_moderator",
+    "couldnt_update_community",
+    "no_community_edit_allowed",
+    "system_err_login",
+    "community_user_already_banned",
+    "couldnt_find_that_username_or_email",
+    "password_incorrect",
+    "invalid_password",
+    "passwords_dont_match",
+    "captcha_incorrect",
+    "invalid_username",
+    "bio_length_overflow",
+    "couldnt_update_user",
+    "couldnt_update_private_message",
+    "couldnt_update_post",
+    "couldnt_create_private_message",
+    "no_private_message_edit_allowed"
   ],
 
   "sv": [
@@ -765,7 +1298,17 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "uk": [
@@ -779,7 +1322,17 @@
     "local",
     "banner",
     "display_name",
-    "bio"
+    "bio",
+    "invalid_url",
+    "report_reason_required",
+    "report_too_long",
+    "couldnt_create_report",
+    "couldnt_resolve_report",
+    "invalid_post_title",
+    "not_a_moderator",
+    "invalid_password",
+    "captcha_incorrect",
+    "bio_length_overflow"
   ],
 
   "zh": [
