Migrated more error strings

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -58,5 +58,7 @@
   "couldnt_create_comment": "تعذّر إنشاءالتعليق.",
   "password_incorrect": "الكلمة السرية خاطئة.",
   "registration_closed": "إنشاء الحسابات معطل",
-  "passwords_dont_match": "الكلمات السرية غير متطابقة."
+  "passwords_dont_match": "الكلمات السرية غير متطابقة.",
+  "email_already_exists": "عنوان البريد الإلكتروني هذا موجود بالفعل.",
+  "user_already_exists": "هذا المستخدِم موجود بالفعل."
 }
