--- a/lib/l10n/intl_hu.arb
+++ b/lib/l10n/intl_hu.arb
@@ -88,5 +88,8 @@
   "couldnt_update_private_message": "Nem lehetett frissíteni a privát üzenetet.",
   "couldnt_update_post": "Nem lehetett frissíteni a bejegyzést",
   "couldnt_create_private_message": "Nem lehetett létrehozni a privát üzenetet.",
-  "no_private_message_edit_allowed": "A privát üzenet szerkesztése nem engedélyezett."
+  "no_private_message_edit_allowed": "A privát üzenet szerkesztése nem engedélyezett.",
+  "post_title_too_long": "A bejegyzés címe túl hosszú.",
+  "email_already_exists": "Az email már létezik.",
+  "user_already_exists": "A felhasználó már létezik."
 }
