--- a/lib/l10n/intl_ko.arb
+++ b/lib/l10n/intl_ko.arb
@@ -102,5 +102,8 @@
   "couldnt_update_private_message": "개인 메시지를 업데이트 할 수 없습니다.",
   "couldnt_update_post": "게시물을 업데이트 할 수 없습니다",
   "couldnt_create_private_message": "개인 메시지를 만들 수 없습니다.",
-  "no_private_message_edit_allowed": "개인 메시지를 편집 할 수 없습니다."
+  "no_private_message_edit_allowed": "개인 메시지를 편집 할 수 없습니다.",
+  "post_title_too_long": "게시물 제목이 너무 깁니다.",
+  "email_already_exists": "이메일이 이미 존재합니다.",
+  "user_already_exists": "사용자가 이미 존재합니다."
 }
