--- a/lib/l10n/intl_uk.arb
+++ b/lib/l10n/intl_uk.arb
@@ -88,5 +88,8 @@
   "couldnt_update_private_message": "Не вдалося оновити особисте повідомлення.",
   "couldnt_update_post": "Не вдалося обновити запис",
   "couldnt_create_private_message": "Не вдалося отримати особисте повідомлення.",
-  "no_private_message_edit_allowed": "Не можна редагувати особисті повідомлення."
+  "no_private_message_edit_allowed": "Не можна редагувати особисті повідомлення.",
+  "post_title_too_long": "Довжина назви перебільшує допустимий ліміт.",
+  "email_already_exists": "E-mail вже існує.",
+  "user_already_exists": "Користувач вже існує."
 }
