--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -102,5 +102,8 @@
   "couldnt_update_private_message": "无法更新私信。",
   "couldnt_update_post": "无法更新帖子",
   "couldnt_create_private_message": "无法创建私信。",
-  "no_private_message_edit_allowed": "没有编辑私信的权限。"
+  "no_private_message_edit_allowed": "没有编辑私信的权限。",
+  "post_title_too_long": "帖子标题过长。",
+  "email_already_exists": "邮箱已占用.",
+  "user_already_exists": "用户已存在。"
 }
